Fix margin on body and div element to get rid of horizontal scrollbar by using calc function

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     background-color: lightgray
     font-family: Arial, Helvetica, sans-serif;
+    min-height: calc(100vh - 1em);
+    margin: 0;
 }
 
 div {
@@ -9,7 +11,7 @@ div {
     width: 80vw;
     min-width: 300px;
     max-width: 500px;
-    margin: 0 auto;
+    margin: 1em auto;
     padding: 0.5em 1em 1em 1em;
 }
 
@@ -34,6 +36,7 @@ label {
 
 input[type="submit"] {
     margin-top: 0.75em;
+    background-color: beige;
 }
 
 input {
